[workspace]
resolver = "2"
members = [
    "bevy-entity-relations/client",
    "bevy-entity-relations/server",
    "bevy-entity-relations/shared",
    "multi-client-socket/client/app",
    "multi-client-socket/client/miniquad",
    "multi-client-socket/client/wasm_bindgen",
    "multi-client-socket/shared_a",
    "multi-client-socket/server_a",
    "multi-client-socket/shared_b",
    "multi-client-socket/server_b",
]

[profile.release]
opt-level = 's'
lto = true