[package]
name = "multi-client-socket-server-a"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[dependencies]
naia-server-socket = { path = "../../../naia/socket/server" }
multi-client-socket-shared-a = { path = "../shared_a" }
log = { version = "0.4" }
simple_logger = { version = "4.0", default-features = false, features = ["timestamps"] }