[package]
name = "multi-client-server-a"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
naia-server = { path = "../../../naia/server", features = [ "transport_webrtc" ] }
naia-demo-world = { path = "../../../naia/demos/demo_utils/demo_world" }
multi-client-server-a-protocol = { path = "protocol" }
log = { version = "0.4" }
simple_logger = { version = "4.0", default-features = false, features = ["timestamps"] }
smol = { version = "1.3" }