[package]
name = "multi-client-socket-client-app"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../../.."
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[features]
mquad = [ "naia-client-socket/mquad", "multi-client-socket-shared-a/mquad", "naia-shared/mquad", "miniquad" ]
wbindgen = [ "naia-client-socket/wbindgen", "multi-client-socket-shared-a/wbindgen", "naia-shared/wbindgen", "log" ]

[dependencies]
multi-client-socket-shared-a = { path = "../../shared" }

naia-client-socket = { path = "../../../../naia/socket/client" }
naia-shared = { path = "../../../../naia/shared" }
cfg-if = { version = "1.0" }
log = { version = "0.4", optional = true }
miniquad = { version = "0.3", features = ["log-impl"], optional = true }