[package]
name = "multi-client-socket-client-app"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../../.."
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[features]
mquad = [ "naia-client-socket/mquad", "multi-client-socket-server-a-protocol/mquad", "naia-shared/mquad", "miniquad" ]
wbindgen = [ "naia-client-socket/wbindgen", "multi-client-socket-server-a-protocol/wbindgen", "naia-shared/wbindgen", "log" ]

[dependencies]
multi-client-socket-server-a-protocol = { path = "../../server_a/protocol" }
multi-client-socket-server-b-protocol = { path = "../../server_b/protocol" }

naia-client-socket = { path = "../../../../naia/socket/client" }
naia-shared = { path = "../../../../naia/shared" }
cfg-if = { version = "1.0" }
log = { version = "0.4", optional = true }
miniquad = { version = "0.3", features = ["log-impl"], optional = true }