[package]
name = "multi-client-client-mq"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../../.."
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "app"
path = "src/main.rs"

[features]

[dependencies]
multi-client-client-app = { path = "../app", features = [ "mquad" ] }
cfg-if = { version = "1.0" }
miniquad = { version = "0.3", features = ["log-impl"] }